# crates-inspector

./: Cargo.toml  README.md
src/: app.rs  error.rs  main.rs
src/data/: dependency.rs  filter.rs  mod.rs  state.rs
src/ui/: mod.rs  screen.rs  uistyles.rs
