[package]
name = "crates-inspector"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
ratatui = {version = "^0.29", features = ["serde"]}
tui-textarea = "^0.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }
thiserror = "^2.0"
open = "1.7.0"
#env_logger = "0.11.8"
#chrono = "0.4.41"
