[package]
name = "crates-inspector"
version = "0.1.2"
edition = "2024"
authors = ["williamgeeker@gmail.com"]
description = "Terminal tool for crates dependencies manager."
readme = "README.md"
homepage = "https://crates.io/crates/crates-inspector"
repository = "https://github.com/Feelin/crates-inspector"
keywords = ["crates", "inspector", "terminal", "dependencies", "package"]
categories = ["command-line-interface"]
license = "GPL-3.0-only"

[dependencies]
log = "0.4"
ratatui = {version = "^0.29", features = ["serde"]}
tui-textarea = "^0.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }
thiserror = "^2.0"
open = "1.7.0"
#env_logger = "0.11.8"
#chrono = "0.4.41"
